# sparkler

./: .gitignore  CMakeLists.txt  Makefile  Makefile.spock  README-HIPLZ.md  main_hip.cpp
HipBLAS-on-MKL/GemmLib/include/: gemmlib.h
HipBLAS-on-MKL/GemmLib/src/: Makefile  gemm_mkl.cpp
HipBLAS-on-MKL/include/: hipblas.h
HipBLAS-on-MKL/src/: Makefile  hipblas-stub.cpp
HipBLAS-on-MKL/test/Common/: CommandLine.h  HipStream.h  HipblasContext.h  HipstarException.h  Matrix.h  hiplz_h2f.h
HipBLAS-on-MKL/test/Sgemm/: Makefile  main.cpp
HipBLAS-on-MKL/test/SparklerGemmEx/: Makefile  main.cpp
src/: CMakeLists.txt  SparklerConfig.h.in  main.cpp
